--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
-    <title> Harsh's Personal Website</title>
+    <link rel="shortcut icon" href="assets/img/logo.png" type="image/png">
+    <title>Harsh's portfolio</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/LineIcons.2.0.css">
 
@@ -316,14 +316,14 @@
     </div> -->
 
 
-    <section id="testimonial" class="py-4 bg-gray-800 ">
+    <section id="testimonial" class="py-10 bg-gray-800">
         <div class="container">
-            <div class="flex justify-center text-center mx-3">
+            <div class="flex justify-center mx-1">
                 <div class="w-full lg:w-7/12">
                     <div id="testimonials" class="testimonials">
 
-                        <!-- <div class="item focus:outline-none">
-                            <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
+                        <div class="item focus:outline-none">
+                            <!-- <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
                                 <div class="text-center">
                                     <p class="text-gray-600 leading-loose">Holisticly empower leveraged ROI whereas effective web-readiness. Completely enable emerging meta-services with cross-platform web services. Quickly initiate inexpensive total linkage rather than extensible scenarios.
                                         Holisticly empower leveraged ROI whereas effective web-readiness. </p>
@@ -334,14 +334,14 @@
                                 <div class="mb-2">
                                     <h2 class="font-bold text-lg uppercase text-blue-600 mb-2">Fajar</h2>
                                     <h3 class="font-medium text-white text-sm">Euphoriya</h3>
-                                </div>
+                                </div> -->
+                                <h3 class="font-bold text-white text-sm text-center text-lg">Pricing</h3>
                             </div>
-                        </div> -->
-                        <h2 class="font-bold text-centre text-4xl uppercase text-blue-600 mb-1 mx-auto my-auto"> Pricing</h2>
+                        </div>
 
-<!-- 
+
                         <div class="item focus:outline-none">
-                            <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
+                            <!-- <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
                                 <div class="text-center">
                                     <p class="text-gray-600 leading-loose">Holisticly empower leveraged ROI whereas effective web-readiness. Completely enable emerging meta-services with cross-platform web services. Quickly initiate inexpensive total linkage rather than extensible scenarios.
                                         Holisticly empower leveraged ROI whereas effective web-readiness. </p>
@@ -353,12 +353,12 @@
                                     <h2 class="font-bold text-lg uppercase text-blue-600 mb-2">Mila</h2>
                                     <h3 class="font-medium text-white text-sm">PageBulb</h3>
                                 </div>
-                            </div>
-                        </div> -->
+                            </div> -->
+                        </div>
 
 
-                        <!-- <div class="item focus:outline-none">
-                            <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
+                        <div class="item focus:outline-none">
+                            <!-- <div class="text-center py-10 px-8 md:px-10 rounded border border-gray-900">
                                 <div class="text-center">
                                     <p class="text-gray-600 leading-loose">Holisticly empower leveraged ROI whereas effective web-readiness. Completely enable emerging meta-services with cross-platform web services. Quickly initiate inexpensive total linkage rather than extensible scenarios.
                                         Holisticly empower leveraged ROI whereas effective web-readiness. </p>
@@ -370,8 +370,8 @@
                                     <h2 class="font-bold text-lg uppercase text-blue-600 mb-2">Rob</h2>
                                     <h3 class="font-medium text-white text-sm">OnePageLove</h3>
                                 </div>
-                            </div>
-                        </div> -->
+                            </div> -->
+                        </div>
 
                     </div>
                 </div>
@@ -434,7 +434,7 @@
                         </div>
                         <div class="mb-5">
                             <p class="text-gray-700">
-                                <span class="font-bold text-2xl">14$</span>
+                                <span class="font-bold text-2xl">15$</span>
                                 <span class="font-medium text-sm">/ Hr</span>
                             </p>
                         </div>
@@ -452,42 +452,25 @@
     </section>
 
 
-    <!-- <section class="carousel-area bg-gray-800 py-32">
+    <section class="carousel-area bg-gray-800 py-10 hidden">
         <div class="container">
             <div class="flex">
                 <div class="w-full relative">
                     <div class="portfolio-carousel">
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img1.jpg" alt="">
-                        </div>
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img2.jpg" alt="">
-                        </div>
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img3.jpg" alt="">
-                        </div>
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img4.jpg" alt="">
-                        </div>
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img5.jpg" alt="">
-                        </div>
-                        <div>
-                            <img class="w-full" src="assets/img/slide/img6.jpg" alt="">
-                        </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-<!-- 
-    <section id="Subscribes" class="text-center py-20 bg-blue-100">
+
+    <!-- <section id="Subscribes" class="text-center py-20 bg-blue-100">
         <div class="container">
             <div class="flex justify-center mx-3">
                 <div class="w-full sm:w-3/4 md:w-2/3 lg:w-1/2">
                     <h4 class="mb-3 section-heading wow fadeInUp" data-wow-delay="0.3s">Start For Free</h4>
-                    <p class="mb-4 text-gray-600 leading-loose text-sm wow fadeInUp" data-wow-delay="0.6s"> Submit your Email, I will Contact you back</p>
+                    <p class="mb-4 text-gray-600 leading-loose text-sm wow fadeInUp" data-wow-delay="0.6s">Existing customized ideas through client-based deliverables. <br> Compellingly unleash fully tested outsourcing</p>
                     <form for="">
                         <div class="wow fadeInDown" data-wow-delay="0.3s">
                             <input type="Email" class="w-full mb-5 bg-white border border-blue-300 rounded-full px-5 py-3 duration-300 focus:border-blue-600 outline-none" name="email" placeholder="Email Address">
@@ -498,7 +481,6 @@
             </div>
         </div>
     </section> -->
-
 
     <section id="contact" class="py-24">
         <div class="container">
@@ -575,7 +557,6 @@
         </div>
     </section>
 
-
     <section id="google-map-area">
         <div class="mx-6 mb-6">
             <div class="flex">
@@ -585,10 +566,7 @@
             </div>
         </div>
     </section>
-    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2247.597837586675!2d73.83504064610236!3d18.664268411356943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9cb52215761%3A0xcf2dda46755947b5!2sBorade%20Estate!5e0!3m2!1sen!2sin!4v1635376846242!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
-
-
-    <footer id="footer" class="bg-gray-800 py-16 items-center">
+       <footer id="footer" class="bg-gray-800 py-16 items-center">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow fadeInUp" data-wow-delay="0.2s">
@@ -600,12 +578,12 @@
                 </div>
                 <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="mx-3 mb-8">
-                        <h3 class="font-bold text-xl text-white mb-5">Company</h3>
-                        <ul>
+                        <!-- <h3 class="font-bold text-xl text-white mb-5">Company</h3> -->
+                        <!-- <ul>
                             <li><a href="#" class="footer-links">Press Releases</a></li>
                             <li><a href="#" class="footer-links">Mission</a></li>
                             <li><a href="#" class="footer-links">Strategy</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
                 <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 wow fadeInUp" data-wow-delay="0.6s">
@@ -623,22 +601,17 @@
                         <h3 class="font-bold text-xl text-white mb-5">Find me on</h3>
                         <ul class="social-icons flex justify-start">
                             <li class="mx-2">
-                                <a href="#" class="footer-icon hover:bg-indigo-500">
-<i class="lni lni-facebook-original" aria-hidden="true"></i>
-</a>
-                            </li>
-                            <li class="mx-2">
-                                <a href="#" class="footer-icon hover:bg-blue-400">
+                                <a href="https://twitter.com/HarshSingh0059" target="_blank" class="footer-icon hover:bg-blue-400">
 <i class="lni lni-twitter-original" aria-hidden="true"></i>
 </a>
                             </li>
                             <li class="mx-2">
-                                <a href="#" class="footer-icon hover:bg-red-500">
+                                <a href="https://www.instagram.com/harshsingh_yt/" target="_blank" class="footer-icon hover:bg-red-500">
 <i class="lni lni-instagram-original" aria-hidden="true"></i>
 </a>
                             </li>
                             <li class="mx-2">
-                                <a href="#" class="footer-icon hover:bg-indigo-600">
+                                <a href="https://www.linkedin.com/in/harsh-singh-a347641aa/" target="_blank" class="footer-icon hover:bg-indigo-600">
 <i class="lni lni-linkedin-original" aria-hidden="true"></i>
 </a>
                             </li>
@@ -663,6 +636,7 @@
     <a href="#" class="back-to-top w-10 h-10 fixed bottom-0 right-0 mb-5 mr-5 flex items-center justify-center rounded-full bg-blue-600 text-white text-lg z-20 duration-300 hover:bg-blue-400">
 <i class="lni lni-arrow-up"></i>
 </a>
+
 
 
 
