--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                 <div class="w-full text-center">
                     <h2 class="text-4xl font-bold leading-snug text-gray-700 mb-10 wow fadeInUp" data-wow-delay="1s"> Hi, Myself Harsh 
                         <br class="hidden lg:block"> I'm A Web Developer</h2>
-                    <div class="text-center mb-10 wow fadeInUp" data-wow-delay="1.2s">
+                    <div class="text-center mb-10 wow fadeInUp" data-wow-delay="1.5s">
                         <a href="#" rel="nofollow" class="btn">My Resume</a>
                     </div>
-                    <div class="text-center wow fadeInUp" data-wow-delay="1.6s">
+                    <div class="text-center wow fadeInUp" data-wow-delay="2s">
                         <img class="img-fluid mx-auto" src="assets/img/hero.svg" alt="">
                     </div>
                 </div>
@@ -89,12 +89,12 @@
     <section id="services" class="py-24">
         <div class="container content-center">
             <div class="text-center">
-                <h2 class="mb-12 section-heading wow fadeInDown" data-wow-delay="0.3s">Services</h2>
+                <h2 class="mb-12 section-heading wow fadeInDown" data-wow-delay="0.5s">Services</h2>
             </div>
             <div class="flex flex-wrap">
 
                 <div class="w-full mx-auto sm:w-1/2 md:w-1/2 lg:w-1/3">
-                    <div class="m-4 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="m-4 wow fadeInRight" data-wow-delay="1s">
                         <div class="icon text-5xl">
                             <i class="lni lni-cog"></i>
                         </div>
@@ -176,6 +176,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- <section id="team" class="py-24 text-center">
         <div class="container">
@@ -405,7 +406,7 @@
 
 
                 <div class="w-3/4 sm:w-2/3 md:w-1/2 lg:w-1/3">
-                    <div class="pricing-box bg-blue-100 wow fadeInLeft" data-wow-delay="1.2s">
+                    <div class="pricing-box bg-blue-100 wow fadeInLeft" data-wow-delay="1.9s">
                         <div class="mb-3">
                             <h3 class="package-name">PROFESIONAL</h3>
                         </div>
@@ -427,7 +428,7 @@
 
 
                 <div class="w-3/4 sm:w-2/3 md:w-1/2 lg:w-1/3">
-                    <div class="pricing-box">
+                    <div class="pricing-box wow fadeInLeft" data-wow-delay="2.9s">
                         <div class="mb-3">
                             <h3 class="package-name">HOURLY</h3>
                         </div>
@@ -484,9 +485,9 @@
     <section id="contact" class="py-24">
         <div class="container">
             <div class="text-center">
-                <h2 class="mb-12 text-4xl text-gray-700 font-bold tracking-wide wow fadeInDown" data-wow-delay="0.3s">Contact</h2>
+                <h2 class="mb-12 text-4xl text-gray-700 font-bold tracking-wide wow fadeInDown" data-wow-delay="1s">Contact</h2>
             </div>
-            <div class="flex flex-wrap contact-form-area wow fadeInUp" data-wow-delay="0.4s">
+            <div class="flex flex-wrap contact-form-area wow fadeInUp" data-wow-delay="1.4s">
                 <div class="w-full md:w-1/2">
                     <div class="contact">
                         <h2 class="uppercase font-bold text-xl text-gray-700 mb-5 ml-3">Contact Form</h2>
@@ -639,11 +640,10 @@
 
 
 
-
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+ <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/tiny-slider.js"></script>
-    <script src="assets/js/contact-form.js"></script>
+    <!-- <script src="assets/js/contact-form.js"></script> -->
     <script src="assets/js/main.js"></script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"6a4f2c565b2431be","version":"2021.10.0","r":1,"token":"c7c0cccb099b49fea6369c04cf6f637c","si":100}'></script>
 </body>
