--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                     <h2 class="font-bold text-lg uppercase text-blue-600 mb-2">Fajar</h2>
                                     <h3 class="font-medium text-white text-sm">Euphoriya</h3>
                                 </div> -->
-                                <h3 class="font-bold text-white text-sm text-center text-lg">Projects</h3>
+                                <h3 class="font-bold text-white text-sm text-center text-lg"></h3>
                             </div>
                         </div>
 
